corrección de estructura de archivos y menú de navegación

--- a/carta.html
+++ b/carta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe con historias</title>
-    <link rel="stylesheet" href="estilos.css"
+    <link rel="stylesheet" href="/css/estilos.css"
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,16 +15,17 @@
     <header class="header" id="inicio">
         <img src="Iconos/bx-menu-alt-right.svg" alt="menu" class="hamburguesa">
         <nav class="menu-navegacion">
-            <a href="#Carta">Carta</a>
-            <a href="#Historia">Historia</a>
-            <a href="#Menu">Menu</a>
-            <a href="#Contacto">Contacto</a>
-            </nav>
-            <div class="contenedor head">
-                <h1 class="titulo">Café con historias</h1>
-                <p class="copy">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, beatae!</p>
-                
-            </div>
+            <ul></ul>
+                <li><a href="#Carta">Carta</a></li>
+                <li><a href="#Historia">Historia</a></li>
+                <li><a href="#Menu">Menu</a></li>
+                <li><a href="#Contacto">Contacto</a></li>
+        </nav>
+        <div class="contenedor head">
+            <h1 class="titulo">Café con historias</h1>
+            <p class="copy">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, beatae!</p>
+            
+        </div>
     </header>
 
     <section class="Carta contenedor" id="Carta"> 
