--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
     <header class="header" id="inicio">
         <img src="Iconos/bx-menu-alt-right.svg" alt="menu" class="hamburguesa">
         <nav class="menu-navegacion">
-            <ul></ul>
-                <li><a href="#Carta">Carta</a></li>
-                <li><a href="#Historia">Historia</a></li>
-                <li><a href="#Menu">Menu</a></li>
-                <li><a href="#Contacto">Contacto</a></li>
+            
+                <a href="index.html">Inicio</a>
+                <a href="carta.html">Carta</a>
+                <a href="historia.html">Historia</a>
+                <a href="menu.html">Menu</a>
+                <a href="contacto.html">Contacto</a>
         </nav>
         <div class="contenedor head">
             <h1 class="titulo">Café con historias</h1>
-            <p class="copy">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, beatae!</p>
+            <p class="copy">Tu lugar ideal, espera por ti.</p>
             
         </div>
     </header>
@@ -41,7 +42,7 @@
                     <div class="contenedor-cafe">
                         <img src="img/conversando.jpg" alt="personas convesando" class="img-conversando">
                         <div class="contenedor-texto-cafe">
-                        <p class="subtitulo">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea, error. Exercitationem fugit minus suscipit magnam vitae. Voluptatibus nulla obcaecati itaque a quas et sint quisquam.</p>
+                        <p class="subtitulo">Detrás de una taza de café hay mucho más que aroma y sabor, es un momento para compartir, para disfrutar y crear historias.</p>
                     </div>
                     </div>
                 </section>
@@ -78,7 +79,7 @@
         <div class="contenedor footer-content">
             <div class="contacto-usuario">
                 <h3 class="marca">Cafe con historias </h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, eos!</p>
+                <p>Visitanos en Thames 530 CABA</p>
             </div>
             <div class="redes-sociales">
                 <a href="./" class="marketing-iconos">
@@ -87,7 +88,7 @@
                 <a href="./" class="marketing-iconos">
                     <i class='bx bxl-twitter' ></i>
                 </a>
-                <a href="./" class="marketing-iconos">
+                <a href="https://instagram.com/cafe_conhistorias?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==" class="marketing-iconos">
                     <i class='bx bxl-instagram' ></i>
                 </a>
                 <a href="./" class="marketing-iconos">
