--- a/contacto.html
+++ b/contacto.html
@@ -15,11 +15,12 @@
     <header class="header" id="inicio">
         <img src="Iconos/bx-menu-alt-right.svg" alt="menu" class="hamburguesa">
         <nav class="menu-navegacion">
-            <ul></ul>
-                <li><a href="#Carta">Carta</a></li>
-                <li><a href="#Historia">Historia</a></li>
-                <li><a href="#Menu">Menu</a></li>
-                <li><a href="#Contacto">Contacto</a></li>
+            <a href="index.html">Inicio</a>
+                
+                <a href="historia.html">Historia</a>
+                <a href="menu.html">Menu</a>
+                <a href="contacto.html">Contacto</a>
+            
         </nav>
         <div class="contenedor head">
             <h1 class="titulo">Café con historias</h1>
