--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe con historias</title>
-    <link rel="stylesheet" href="css/estilos.css"
+    <link rel="stylesheet" href="css/estilos.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,11 +15,11 @@
     <header class="header" id="inicio">
         <img src="Iconos/bx-menu-alt-right.svg" alt="menu" class="hamburguesa">
         <nav class="menu-navegacion">
-            <ul></ul>
-                <li><a href="#Carta">Carta</a></li>
-                <li><a href="#Historia">Historia</a></li>
-                <li><a href="#Menu">Menu</a></li>
-                <li><a href="#Contacto">Contacto</a></li>
+                <a href="index.html">Inicio</a>
+               
+                <a href="historia.html">Historia</a>
+                <a href="menu.html">Menu</a>
+                <a href="contacto.html">Contacto</a>
         </nav>
             <div class="contenedor head">
                 <h1 class="titulo">Café con historias</h1>
