actualización de menú de productos -unificación del footer  -  corección de superposición de menú desplegable

--- a/contacto.html
+++ b/contacto.html
@@ -44,12 +44,12 @@
 
     </section>
 
-    <footer id="redes">
+    <footer id="redes" class="footer">
         
         <div class="contenedor footer-content">
-            <div class="Marca">
-                <h2 class="cafe-historias">Cafe con historias </h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, eos!</p>
+            <div class="contacto-usuario">
+                <h3 class="marca">Cafe con historias </h3>
+                <p>Visitanos en Thames 530 CABA</p>
             </div>
             <div class="redes-sociales">
                 <a href="./" class="marketing-iconos">
@@ -58,7 +58,7 @@
                 <a href="./" class="marketing-iconos">
                     <i class='bx bxl-twitter' ></i>
                 </a>
-                <a href="./" class="marketing-iconos">
+                <a href="https://instagram.com/cafe_conhistorias?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==" class="marketing-iconos">
                     <i class='bx bxl-instagram' ></i>
                 </a>
                 <a href="./" class="marketing-iconos">
@@ -69,6 +69,7 @@
             </div>
             
           </div>
+          <div class="line"></div>
      </footer>
    
      <script src="script.js/menu.js"></script>
