--- a/menu.html
+++ b/menu.html
@@ -18,11 +18,11 @@
     <header class="header" id="inicio">
         <img src="Iconos/bx-menu-alt-right.svg" alt="menu" class="hamburguesa">
         <nav class="menu-navegacion">
-                <a href="index.html">Inicio</a>
-               
-                <a href="historia.html">Historia</a>
-                <a href="menu.html">Menu</a>
-                <a href="contacto.html">Contacto</a>
+            <a href="index.html">Inicio</a>
+
+            <a href="historia.html">Historia</a>
+            <a href="menu.html">Menu</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
         <div class="contenedor head">
             <h1 class="titulo">Café con historias</h1>
@@ -37,88 +37,92 @@
             <!--agregar imagen-->
 
             <div class="menuPadre">
-                 <div class="menuHijo">
-                    <div class="imagen">
-                        <img src="img/cafe 400x400.png" alt="Imagen 1">
-                        <div class="descripcion">Descripción de la imagen 1</div>
+                <div class="menuHijo">
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem1.png" alt="Item1: Café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
                     </div>
-                    <div class="imagen">
-                        <img src="img/cafe 400x400.png" alt="Imagen 1">
-                        <div class="descripcion">Descripción de la imagen 1</div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem2.png" alt="Item2: Capuchino $1200">
+                        <div class="descripcion">Capuchino ........ $1200</div>
                     </div>
-                    <div class="imagen">
-                        <img src="img/cafe 400x400.png" alt="Imagen 1">
-                        <div class="descripcion">Descripción de la imagen 1</div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem3.png" alt="Item1: café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
                     </div>
-                    <div class="imagen">
-                        <img src="img/cafe 400x400.png" alt="Imagen 1">
-                        <div class="descripcion">Descripción de la imagen 1</div>
-                    </div>
-                </div>
-                 <div class="menuHijo">
-                    <div class="imagen">
-                        <img src="img/cafe 400x400.png" alt="Imagen 1">
-                        <div class="descripcion">Descripción de la imagen 1</div>
-                    </div>
-                    <div class="imagen">
-                        <img src="img/cafe 400x400.png" alt="Imagen 1">
-                        <div class="descripcion">Descripción de la imagen 1</div>
-                    </div>
-                    <div class="imagen">
-                        <img src="img/cafe 400x400.png" alt="Imagen 1">
-                        <div class="descripcion">Descripción de la imagen 1</div>
-                    </div>
-                    <div class="imagen">
-                        <img src="img/cafe 400x400.png" alt="Imagen 1">
-                        <div class="descripcion">Descripción de la imagen 1</div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem4.png" alt="Item1: café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
                     </div>
                 </div>
-                 <div class="menuHijo">
-                    <div class="imagen">
-                        <img src="img/cafe 400x400.png" alt="Imagen 1">
-                        <div class="descripcion">Descripción de la imagen 1</div>
+ 
+                <div class="menuHijo">
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem5.png" alt="Item1: Café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
                     </div>
-                    <div class="imagen">
-                        <img src="img/cafe 400x400.png" alt="Imagen 1">
-                        <div class="descripcion">Descripción de la imagen 1</div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem6.png" alt="Item2: Capuchino $1200">
+                        <div class="descripcion">Capuchino ........ $1200</div>
                     </div>
-                    <div class="imagen">
-                        <img src="img/cafe 400x400.png" alt="Imagen 1">
-                        <div class="descripcion">Descripción de la imagen 1</div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem7.png" alt="Item1: café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
                     </div>
-                    <div class="imagen">
-                        <img src="img/cafe 400x400.png" alt="Imagen 1">
-                        <div class="descripcion">Descripción de la imagen 1</div>
-                    </div>
-                </div>
-                 <div class="menuHijo">
-                    <div class="imagen">
-                        <img src="img/cafe 400x400.png" alt="Imagen 1">
-                        <div class="descripcion">Descripción de la imagen 1</div>
-                    </div>
-                    <div class="imagen">
-                        <img src="img/cafe 400x400.png" alt="Imagen 1">
-                        <div class="descripcion">Descripción de la imagen 1</div>
-                    </div>
-                    <div class="imagen">
-                        <img src="img/cafe 400x400.png" alt="Imagen 1">
-                        <div class="descripcion">Descripción de la imagen 1</div>
-                    </div>
-                    <div class="imagen">
-                        <img src="img/cafe 400x400.png" alt="Imagen 1">
-                        <div class="descripcion">Descripción de la imagen 1</div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem8.png" alt="Item1: café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
                     </div>
                 </div>
+ 
+                <div class="menuHijo">
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem9.png" alt="Item1: Café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
+                    </div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem10.png" alt="Item2: Capuchino $1200">
+                        <div class="descripcion">Capuchino ........ $1200</div>
+                    </div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem11.png" alt="Item1: café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
+                    </div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem12.png" alt="Item1: café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
+                    </div>
+                </div>
+ 
+                <div class="menuHijo">
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem13.png" alt="Item1: Café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
+                    </div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem14.png" alt="Item2: Capuchino $1200">
+                        <div class="descripcion">Capuchino ........ $1200</div>
+                    </div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem15.png" alt="Item1: café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
+                    </div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem16.png" alt="Item1: café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
+                    </div>
+                </div>
+ 
 
-        </div>
+            </div>
     </section>
 
-    <footer id="redes">
+    <footer id="redes" class="footer">
 
         <div class="contenedor footer-content">
-            <div class="Marca">
-                <h2 class="cafe-historias">Cafe con historias </h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, eos!</p>
+            <div class="contacto-usuario">
+                <h3 class="marca">Cafe con historias </h3>
+                <p>Visitanos en Thames 530 CABA</p>
             </div>
             <div class="redes-sociales">
                 <a href="./" class="marketing-iconos">
@@ -127,7 +131,8 @@
                 <a href="./" class="marketing-iconos">
                     <i class='bx bxl-twitter'></i>
                 </a>
-                <a href="./" class="marketing-iconos">
+                <a href="https://instagram.com/cafe_conhistorias?utm_source=qr&igshid=MzNlNGNkZWQ4Mg=="
+                    class="marketing-iconos">
                     <i class='bx bxl-instagram'></i>
                 </a>
                 <a href="./" class="marketing-iconos">
@@ -138,6 +143,7 @@
             </div>
 
         </div>
+        <div class="line"></div>
     </footer>
 
     <script src="script.js/menu.js"></script>
