corrección de estructuras HTML

--- a/menu.html
+++ b/menu.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafe con historias</title>
+    <title>CCH - Menú</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Open+Sans:wght@300;400;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -19,103 +18,100 @@
         <img src="Iconos/bx-menu-alt-right.svg" alt="menu" class="hamburguesa">
         <nav class="menu-navegacion">
             <a href="index.html">Inicio</a>
-
             <a href="historia.html">Historia</a>
             <a href="menu.html">Menu</a>
             <a href="contacto.html">Contacto</a>
         </nav>
         <div class="contenedor head">
             <h1 class="titulo">Café con historias</h1>
-            <p class="copy">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, beatae!</p>
-
+            <p class="copy">Tu lugar ideal, espera por ti.</p>
         </div>
     </header>
 
-    <section class="menu contenedor" id="Menu">
-        <h2 class="subtitulo"> Nuestro Menu</h2>
-        <div class="menu">
-            <!--agregar imagen-->
+    <main>
+        <section class="menu contenedor" id="Menu">
+            <h2 class="subtitulo">Nuestro Menú</h2>
+            <div class="menu">
+                <div class="menuPadre">
+                    <div class="menuHijo">
+                        <div class="imagenMenu">
+                            <img src="img/MenuItem1.png" alt="Item1: Café con leche $900">
+                            <div class="descripcion">Café con leche ........ $900</div>
+                        </div>
+                        <div class="imagenMenu">
+                            <img src="img/MenuItem2.png" alt="Item2: Capuchino $1200">
+                            <div class="descripcion">Capuchino ........ $1200</div>
+                        </div>
+                        <div class="imagenMenu">
+                            <img src="img/MenuItem3.png" alt="Item1: café con leche $900">
+                            <div class="descripcion">Café con leche ........ $900</div>
+                        </div>
+                        <div class="imagenMenu">
+                            <img src="img/MenuItem4.png" alt="Item1: café con leche $900">
+                            <div class="descripcion">Café con leche ........ $900</div>
+                        </div>
+                    </div>
 
-            <div class="menuPadre">
-                <div class="menuHijo">
-                    <div class="imagenMenu">
-                        <img src="img/MenuItem1.png" alt="Item1: Café con leche $900">
-                        <div class="descripcion">Café con leche ........ $900</div>
+                    <div class="menuHijo">
+                        <div class="imagenMenu">
+                            <img src="img/MenuItem5.png" alt="Item1: Café con leche $900">
+                            <div class="descripcion">Café con leche ........ $900</div>
+                        </div>
+                        <div class="imagenMenu">
+                            <img src="img/MenuItem6.png" alt="Item2: Capuchino $1200">
+                            <div class="descripcion">Capuchino ........ $1200</div>
+                        </div>
+                        <div class="imagenMenu">
+                            <img src="img/MenuItem7.png" alt="Item1: café con leche $900">
+                            <div class="descripcion">Café con leche ........ $900</div>
+                        </div>
+                        <div class="imagenMenu">
+                            <img src="img/MenuItem8.png" alt="Item1: café con leche $900">
+                            <div class="descripcion">Café con leche ........ $900</div>
+                        </div>
                     </div>
-                    <div class="imagenMenu">
-                        <img src="img/MenuItem2.png" alt="Item2: Capuchino $1200">
-                        <div class="descripcion">Capuchino ........ $1200</div>
-                    </div>
-                    <div class="imagenMenu">
-                        <img src="img/MenuItem3.png" alt="Item1: café con leche $900">
-                        <div class="descripcion">Café con leche ........ $900</div>
-                    </div>
-                    <div class="imagenMenu">
-                        <img src="img/MenuItem4.png" alt="Item1: café con leche $900">
-                        <div class="descripcion">Café con leche ........ $900</div>
-                    </div>
-                </div>
- 
-                <div class="menuHijo">
-                    <div class="imagenMenu">
-                        <img src="img/MenuItem5.png" alt="Item1: Café con leche $900">
-                        <div class="descripcion">Café con leche ........ $900</div>
-                    </div>
-                    <div class="imagenMenu">
-                        <img src="img/MenuItem6.png" alt="Item2: Capuchino $1200">
-                        <div class="descripcion">Capuchino ........ $1200</div>
-                    </div>
-                    <div class="imagenMenu">
-                        <img src="img/MenuItem7.png" alt="Item1: café con leche $900">
-                        <div class="descripcion">Café con leche ........ $900</div>
-                    </div>
-                    <div class="imagenMenu">
-                        <img src="img/MenuItem8.png" alt="Item1: café con leche $900">
-                        <div class="descripcion">Café con leche ........ $900</div>
-                    </div>
-                </div>
- 
-                <div class="menuHijo">
-                    <div class="imagenMenu">
-                        <img src="img/MenuItem9.png" alt="Item1: Café con leche $900">
-                        <div class="descripcion">Café con leche ........ $900</div>
-                    </div>
-                    <div class="imagenMenu">
-                        <img src="img/MenuItem10.png" alt="Item2: Capuchino $1200">
-                        <div class="descripcion">Capuchino ........ $1200</div>
-                    </div>
-                    <div class="imagenMenu">
-                        <img src="img/MenuItem11.png" alt="Item1: café con leche $900">
-                        <div class="descripcion">Café con leche ........ $900</div>
-                    </div>
-                    <div class="imagenMenu">
-                        <img src="img/MenuItem12.png" alt="Item1: café con leche $900">
-                        <div class="descripcion">Café con leche ........ $900</div>
-                    </div>
-                </div>
- 
-                <div class="menuHijo">
-                    <div class="imagenMenu">
-                        <img src="img/MenuItem13.png" alt="Item1: Café con leche $900">
-                        <div class="descripcion">Café con leche ........ $900</div>
-                    </div>
-                    <div class="imagenMenu">
-                        <img src="img/MenuItem14.png" alt="Item2: Capuchino $1200">
-                        <div class="descripcion">Capuchino ........ $1200</div>
-                    </div>
-                    <div class="imagenMenu">
-                        <img src="img/MenuItem15.png" alt="Item1: café con leche $900">
-                        <div class="descripcion">Café con leche ........ $900</div>
-                    </div>
-                    <div class="imagenMenu">
-                        <img src="img/MenuItem16.png" alt="Item1: café con leche $900">
-                        <div class="descripcion">Café con leche ........ $900</div>
-                    </div>
-                </div>
- 
 
+                    <div class="menuHijo">
+                        <div class="imagenMenu">
+                            <img src="img/MenuItem9.png" alt="Item1: Café con leche $900">
+                            <div class="descripcion">Café con leche ........ $900</div>
+                        </div>
+                        <div class="imagenMenu">
+                            <img src="img/MenuItem10.png" alt="Item2: Capuchino $1200">
+                            <div class="descripcion">Capuchino ........ $1200</div>
+                        </div>
+                        <div class="imagenMenu">
+                            <img src="img/MenuItem11.png" alt="Item1: café con leche $900">
+                            <div class="descripcion">Café con leche ........ $900</div>
+                        </div>
+                        <div class="imagenMenu">
+                            <img src="img/MenuItem12.png" alt="Item1: café con leche $900">
+                            <div class="descripcion">Café con leche ........ $900</div>
+                        </div>
+                    </div>
+
+                    <div class="menuHijo">
+                        <div class="imagenMenu">
+                            <img src="img/MenuItem13.png" alt="Item1: Café con leche $900">
+                            <div class="descripcion">Café con leche ........ $900</div>
+                        </div>
+                        <div class="imagenMenu">
+                            <img src="img/MenuItem14.png" alt="Item2: Capuchino $1200">
+                            <div class="descripcion">Capuchino ........ $1200</div>
+                        </div>
+                        <div class="imagenMenu">
+                            <img src="img/MenuItem15.png" alt="Item1: café con leche $900">
+                            <div class="descripcion">Café con leche ........ $900</div>
+                        </div>
+                        <div class="imagenMenu">
+                            <img src="img/MenuItem16.png" alt="Item1: café con leche $900">
+                            <div class="descripcion">Café con leche ........ $900</div>
+                        </div>
+                    </div>
+                </div>
             </div>
-    </section>
+        </section>
+    </main>
 
     <footer id="redes" class="footer">
 
@@ -148,7 +144,7 @@
 
     <script src="script.js/menu.js"></script>
     <script src="script.js/pagina.js"></script>
-
+    <script src="script.js/ligtbox.js"></script>
 
 </body>
 
