corrección de actualizacion

--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Open+Sans:wght@300;400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -29,84 +30,82 @@
     </header>
 
     <main>
-        <section class="menu contenedor" id="Menu">
+        <section class="contenedor" id="Menu">
             <h2 class="subtitulo">Nuestro Menú</h2>
-            <div class="menu">
-                <div class="menuPadre">
-                    <div class="menuHijo">
-                        <div class="imagenMenu">
-                            <img src="img/MenuItem1.png" alt="Item1: Café con leche $900">
-                            <div class="descripcion">Café con leche ........ $900</div>
-                        </div>
-                        <div class="imagenMenu">
-                            <img src="img/MenuItem2.png" alt="Item2: Capuchino $1200">
-                            <div class="descripcion">Capuchino ........ $1200</div>
-                        </div>
-                        <div class="imagenMenu">
-                            <img src="img/MenuItem3.png" alt="Item1: café con leche $900">
-                            <div class="descripcion">Café con leche ........ $900</div>
-                        </div>
-                        <div class="imagenMenu">
-                            <img src="img/MenuItem4.png" alt="Item1: café con leche $900">
-                            <div class="descripcion">Café con leche ........ $900</div>
-                        </div>
+            <div class="menuPadre">
+                <div class="menuHijo">
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem1.png" alt="Item1: Café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
                     </div>
-
-                    <div class="menuHijo">
-                        <div class="imagenMenu">
-                            <img src="img/MenuItem5.png" alt="Item1: Café con leche $900">
-                            <div class="descripcion">Café con leche ........ $900</div>
-                        </div>
-                        <div class="imagenMenu">
-                            <img src="img/MenuItem6.png" alt="Item2: Capuchino $1200">
-                            <div class="descripcion">Capuchino ........ $1200</div>
-                        </div>
-                        <div class="imagenMenu">
-                            <img src="img/MenuItem7.png" alt="Item1: café con leche $900">
-                            <div class="descripcion">Café con leche ........ $900</div>
-                        </div>
-                        <div class="imagenMenu">
-                            <img src="img/MenuItem8.png" alt="Item1: café con leche $900">
-                            <div class="descripcion">Café con leche ........ $900</div>
-                        </div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem2.png" alt="Item2: Capuchino $1200">
+                        <div class="descripcion">Capuchino ........ $1200</div>
                     </div>
-
-                    <div class="menuHijo">
-                        <div class="imagenMenu">
-                            <img src="img/MenuItem9.png" alt="Item1: Café con leche $900">
-                            <div class="descripcion">Café con leche ........ $900</div>
-                        </div>
-                        <div class="imagenMenu">
-                            <img src="img/MenuItem10.png" alt="Item2: Capuchino $1200">
-                            <div class="descripcion">Capuchino ........ $1200</div>
-                        </div>
-                        <div class="imagenMenu">
-                            <img src="img/MenuItem11.png" alt="Item1: café con leche $900">
-                            <div class="descripcion">Café con leche ........ $900</div>
-                        </div>
-                        <div class="imagenMenu">
-                            <img src="img/MenuItem12.png" alt="Item1: café con leche $900">
-                            <div class="descripcion">Café con leche ........ $900</div>
-                        </div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem3.png" alt="Item1: café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
                     </div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem4.png" alt="Item1: café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
+                    </div>
+                </div>
 
-                    <div class="menuHijo">
-                        <div class="imagenMenu">
-                            <img src="img/MenuItem13.png" alt="Item1: Café con leche $900">
-                            <div class="descripcion">Café con leche ........ $900</div>
-                        </div>
-                        <div class="imagenMenu">
-                            <img src="img/MenuItem14.png" alt="Item2: Capuchino $1200">
-                            <div class="descripcion">Capuchino ........ $1200</div>
-                        </div>
-                        <div class="imagenMenu">
-                            <img src="img/MenuItem15.png" alt="Item1: café con leche $900">
-                            <div class="descripcion">Café con leche ........ $900</div>
-                        </div>
-                        <div class="imagenMenu">
-                            <img src="img/MenuItem16.png" alt="Item1: café con leche $900">
-                            <div class="descripcion">Café con leche ........ $900</div>
-                        </div>
+                <div class="menuHijo">
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem5.png" alt="Item1: Café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
+                    </div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem6.png" alt="Item2: Capuchino $1200">
+                        <div class="descripcion">Capuchino ........ $1200</div>
+                    </div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem7.png" alt="Item1: café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
+                    </div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem8.png" alt="Item1: café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
+                    </div>
+                </div>
+
+                <div class="menuHijo">
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem9.png" alt="Item1: Café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
+                    </div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem10.png" alt="Item2: Capuchino $1200">
+                        <div class="descripcion">Capuchino ........ $1200</div>
+                    </div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem11.png" alt="Item1: café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
+                    </div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem12.png" alt="Item1: café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
+                    </div>
+                </div>
+
+                <div class="menuHijo">
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem13.png" alt="Item1: Café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
+                    </div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem14.png" alt="Item2: Capuchino $1200">
+                        <div class="descripcion">Capuchino ........ $1200</div>
+                    </div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem15.png" alt="Item1: café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
+                    </div>
+                    <div class="imagenMenu">
+                        <img src="img/MenuItem16.png" alt="Item1: café con leche $900">
+                        <div class="descripcion">Café con leche ........ $900</div>
                     </div>
                 </div>
             </div>
