--- a/contacto.html
+++ b/contacto.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafe con historias</title>
-    <link rel="stylesheet" href="estilos.css"
+    <title>CCH - Contacto</title>
+    <link rel="stylesheet" href="css/estilos.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <header class="header" id="inicio">
         <img src="Iconos/bx-menu-alt-right.svg" alt="menu" class="hamburguesa">
         <nav class="menu-navegacion">
-            <a href="#Carta">Carta</a>
-            <a href="#Historia">Historia</a>
-            <a href="#Menu">Menu</a>
-            <a href="#Contacto">Contacto</a>
-            </nav>
-            <div class="contenedor head">
-                <h1 class="titulo">Café con historias</h1>
-                <p class="copy">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, beatae!</p>
-                
-            </div>
+            <a href="index.html">Inicio</a>           
+            <a href="historia.html">Historia</a>
+            <a href="menu.html">Menu</a>
+            <a href="contacto.html">Contacto</a>
+        </nav>
+        <div class="contenedor head">
+            <h1 class="titulo">Café con historias</h1>
+            <p class="copy">Tu lugar ideal, espera por ti.</p>
+        </div>
     </header>
 
     <section class="contacto contenedor" id="Contacto">
@@ -79,8 +80,8 @@
     <footer id="redes" class="footer">
         
         <div class="contenedor footer-content">
-            <div class="contacto-usuario">
-                <h3 class="marca">Cafe con historias </h3>
+            <div class="Marca">
+                <h2 class="cafe-historias">Cafe con historias </h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, eos!</p>
             </div>
             <div class="redes-sociales">
@@ -90,7 +91,7 @@
                 <a href="./" class="marketing-iconos">
                     <i class='bx bxl-twitter' ></i>
                 </a>
-                <a href="./" class="marketing-iconos">
+                <a href="https://instagram.com/cafe_conhistorias?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==" class="marketing-iconos">
                     <i class='bx bxl-instagram' ></i>
                 </a>
                 <a href="./" class="marketing-iconos">
