correccion del lightbox, menu de navegacion

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <section class="imagen-ligth">
                 <img src="Iconos/bx-x.svg" alt="" class="close">
-                <img src="img/cafe6.jpg" alt="" class="agregar-imagen">
+                <img src="" alt="" class="agregar-imagen">
             </section>
         </section>
 
