modificar html contacto, falta terminar java

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
         <div class="contenedor footer-content">
             <div class="contacto-usuario">
                 <h3 class="marca">Cafe con historias </h3>
-                <p>Visitanos en Thames 530 CABA</p>
+                <p>Siempre tenemos algo que contar</p>
+                
             </div>
             <div class="redes-sociales">
                 <a href="./" class="marketing-iconos">
