--- a/menu.html
+++ b/menu.html
@@ -117,7 +117,7 @@
         <div class="contenedor footer-content">
             <div class="Marca">
                 <h2 class="cafe-historias">Cafe con historias </h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, eos!</p>
+                <p>Siempre tenemos algo que contar</p>
             </div>
             <div class="redes-sociales">
                 <a href="./" class="marketing-iconos">
