corrección de menu - pagina historia

--- a/historia.html
+++ b/historia.html
@@ -28,13 +28,77 @@
         </div>
     </header>
 
-    <section class="historia contenedor" id="Historia">
-        <h2 class="subtitulo"> Nuestra historia</h2>
-        <div class="historia">
-            <!--agregar imagen--> 
-        </div>
+    <main>
+        <section class="contenedor">
+            <br>
+            <h2 class="subtitulo"> Nuestra historia</h2>
+            <div class="historiaPadre">
+                <div class="historiaHijoImg">
+                    <img src="img/old_coffe_shop_founders to ast.jpg" alt="Socios fundadores">
+                </div>
+                <div class="historiaHijoTxt">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum temporibus non officiis
+                        laudantium et, commodi ipsa corrupti repellendus harum magnam est expedita beatae nulla
+                        doloremque a corporis exercitationem sit. Adipisci dolore distinctio dolores id dignissimos
+                        architecto fugiat repellendus! Natus perferendis accusamus soluta libero officia, fuga quia!
+                        Quidem corporis, ipsa aperiam recusandae officia consectetur in fugiat soluta deserunt
+                        asperiores sed reprehenderit mollitia illo voluptate maxime, sapiente eos voluptatibus quia
+                        laudantium, impedit non! Voluptates, libero! Doloribus vel, impedit repellat corrupti quos
+                        assumenda tempore magni animi ducimus laudantium velit dicta labore, quia, eos qui odit illo
+                        porro magnam in unde eveniet libero fugiat.</p>
+                </div>
 
-    </section>
+                <div class="historiaHijoTxt">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis similique fugit nesciunt
+                        quae modi id unde, consequatur ullam aspernatur assumenda commodi laudantium temporibus,
+                        asperiores incidunt voluptatum! Odio, ut! Blanditiis minima, quos quod ullam, dignissimos,
+                        cupiditate alias nulla saepe vitae quibusdam iure autem quas voluptatibus voluptates illum
+                        dolore eveniet explicabo. Earum ducimus facilis, harum temporibus id illum quae deserunt eius
+                        autem impedit aut enim atque ipsam, minus eum quam debitis rerum nihil quasi distinctio
+                        doloremque. Doloribus fugit saepe in atque itaque voluptatibus iure minima quidem laudantium
+                        sint, vitae odio vero deserunt provident modi obcaecati deleniti voluptas laboriosam debitis
+                        dolorum nihil est perspiciatis exercitationem. A neque, perspiciatis consequatur accusantium
+                        officiis ducimus error dolore? Repellendus, ex debitis. Voluptate asperiores provident hic vitae
+                        sunt. Consectetur quasi architecto asperiores voluptatem beatae! Sint autem minus debitis
+                        voluptate doloribus iste quam repellat quidem optio assumenda veniam eaque, dignissimos quod
+                        fugit dolores modi, non consequatur, quasi quis sequi.</p>
+                </div>
+                <div class="historiaHijoImg">
+                    <img src="img/old_coffee_shop-recklesspixels.jpg" alt="Nuestro antiguo local">
+                </div>
+                <div class="historiaHijoTxtGde">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident cumque dignissimos impedit animi dicta repellendus blanditiis, quae, saepe expedita aliquid autem aliquam distinctio, maxime omnis nesciunt nihil non obcaecati nobis?</p>
+                </div>
+                <div class="historiaHijoImgDual">
+                    <img src="img/new_coffe_shop building.jpg" alt="Construcción del nuevo local">
+                </div>
+                <div class="historiaHijoImgDual">
+                    <img src="img/new_coffe_shop inauguration hpc-ch.jpg" alt="Foto del día de la inauguración">
+                </div>              
+
+                <div class="historiaHijoTxtGde">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis similique fugit nesciunt
+                        quae modi id unde, consequatur ullam aspernatur assumenda commodi laudantium temporibus,
+                        asperiores incidunt voluptatum! Odio, ut! Blanditiis minima, quos quod ullam, dignissimos,
+                        cupiditate alias nulla saepe vitae quibusdam iure autem quas voluptatibus voluptates illum
+                        dolore eveniet explicabo. Earum ducimus facilis, harum temporibus id illum quae deserunt eius
+                        autem impedit aut enim atque ipsam, minus eum quam debitis rerum nihil quasi distinctio
+                        doloremque. Doloribus fugit saepe in atque itaque voluptatibus iure minima quidem laudantium
+                        sint, vitae odio vero deserunt provident modi obcaecati deleniti voluptas laboriosam debitis
+                        dolorum nihil est perspiciatis exercitationem. A neque, perspiciatis consequatur accusantium
+                        officiis ducimus error dolore? Repellendus, ex debitis. Voluptate asperiores provident hic vitae
+                        sunt. Consectetur quasi architecto asperiores voluptatem beatae! Sint autem minus debitis
+                        voluptate doloribus iste quam repellat quidem optio assumenda veniam eaque, dignissimos quod
+                        fugit dolores modi, non consequatur, quasi quis sequi.</p>
+                </div>
+
+                <div class="historiaHijoImgGde">
+                    <img src="img/new_coffe_shop inside secrethouston.jpg" alt="Nuestro local hoy">
+                </div>
+            </div>
+
+        </section>
+    </main>
 
     <footer id="redes" class="footer">
         
