--- a/menu.html
+++ b/menu.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Open+Sans:wght@300;400;700&display=swap"
         rel="stylesheet">
+    <link rel="shortcut icon" href="img/3_85300.ico" type="image/x-icon">
 </head>
 
 <body>
