correciones menores, compresión de imágenes

--- a/historia.html
+++ b/historia.html
@@ -63,7 +63,17 @@
                     <img src="img/old_coffee_shop-recklesspixels.jpg" alt="Nuestro antiguo local">
                 </div>
                 <div class="historiaHijoTxtGde">
-                    <p>El negocio de Rafael y Felipe floreció rápidamente. La calidad inigualable de sus cafés y el ambiente acogedor que ofrecían se convirtieron en un secreto a voces en la ciudad. Apenas unos años después de abrir su primera cafetería, la demanda era tan alta que tomaron la audaz decisión de construir un nuevo local. Con la visión de crear un espacio aún más impresionante, se embarcaron en la emocionante tarea de la construcción. La imagen de los obreros laboriosos, martillos y sierras en mano, es un recuerdo imborrable de los días en que su sueño cobraba vida. Cada ladrillo y viga puestos con amor y cuidado se convirtieron en la base de lo que hoy es nuestro icónico local. Y cuando llegó el día de la gran inauguración, Rafael y Felipe, con tijeras doradas en mano, cortaron la cinta inaugural con sonrisas de satisfacción y gratitud. Ese momento marcó un nuevo capítulo en nuestra historia, un capítulo en el que cada taza de café cuenta una historia de éxito y amistad.</p>
+                    <p>El negocio de Rafael y Felipe floreció rápidamente. La calidad inigualable de sus cafés y el
+                        ambiente acogedor que ofrecían se convirtieron en un secreto a voces en la ciudad. Apenas unos
+                        años después de abrir su primera cafetería, la demanda era tan alta que tomaron la audaz
+                        decisión de construir un nuevo local. Con la visión de crear un espacio aún más impresionante,
+                        se embarcaron en la emocionante tarea de la construcción. La imagen de los obreros laboriosos,
+                        martillos y sierras en mano, es un recuerdo imborrable de los días en que su sueño cobraba vida.
+                        Cada ladrillo y viga puestos con amor y cuidado se convirtieron en la base de lo que hoy es
+                        nuestro icónico local. Y cuando llegó el día de la gran inauguración, Rafael y Felipe, con
+                        tijeras doradas en mano, cortaron la cinta inaugural con sonrisas de satisfacción y gratitud.
+                        Ese momento marcó un nuevo capítulo en nuestra historia, un capítulo en el que cada taza de café
+                        cuenta una historia de éxito y amistad.</p>
                 </div>
                 <div class="historiaHijoImgDual">
                     <img src="img/new_coffe_shop building.jpg" alt="Construcción del nuevo local">
@@ -73,9 +83,19 @@
                 </div>
 
                 <div class="historiaHijoTxtGde">
-                    <p>Con el tiempo, nuestro local se convirtió en un refugio querido para todos aquellos que buscaban un respiro en medio del ajetreo diario. La razón es simple: hemos mantenido nuestra promesa de brindar un espacio donde la gente se sienta verdaderamente en casa. Nuestro ambiente ha evolucionado con los años, pero siempre ha mantenido su esencia acogedora. Desde la primera taza de café que servimos hasta el día de hoy, nuestra misión ha sido crear un lugar donde la gente pueda relajarse, charlar y crear recuerdos inolvidables.</p>
-                    <p>El local que una vez fue solo un sueño se ha transformado en el corazón vibrante de nuestra comunidad. Hoy en día, puedes disfrutar de una amplia variedad de cafés artesanales, deliciosas opciones de pastelería y un ambiente que te hará sentir como en casa. Te invitamos a visitarnos y ser parte de nuestra historia. Nuestro cálido personal y las fragantes notas de café recién hecho te esperan con los brazos abiertos. ¡Te damos la bienvenida a nuestro hogar lejos de casa!</p>
-                    
+                    <p>Con el tiempo, nuestro local se convirtió en un refugio querido para todos aquellos que buscaban
+                        un respiro en medio del ajetreo diario. La razón es simple: hemos mantenido nuestra promesa de
+                        brindar un espacio donde la gente se sienta verdaderamente en casa. Nuestro ambiente ha
+                        evolucionado con los años, pero siempre ha mantenido su esencia acogedora. Desde la primera taza
+                        de café que servimos hasta el día de hoy, nuestra misión ha sido crear un lugar donde la gente
+                        pueda relajarse, charlar y crear recuerdos inolvidables.</p>
+                    <p>El local que una vez fue solo un sueño se ha transformado en el corazón vibrante de nuestra
+                        comunidad. Hoy en día, puedes disfrutar de una amplia variedad de cafés artesanales, deliciosas
+                        opciones de pastelería y un ambiente que te hará sentir como en casa. Te invitamos a visitarnos
+                        y ser parte de nuestra historia. Nuestro cálido personal y las fragantes notas de café recién
+                        hecho te esperan con los brazos abiertos. ¡Te damos la bienvenida a nuestro hogar lejos de casa!
+                    </p>
+
                 </div>
 
                 <div class="historiaHijoImgGde">
