actualizacion de menu desplegable

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="historia.html">Historia</a>
             <a href="menu.html">Menu</a>
             <a href="contacto.html">Contacto</a>
+            <a href="organizador.html">Reservas</a>
         </nav>
         <div class="contenedor head">
             <h1 class="titulo">Café con historias</h1>
